[gd_scene load_steps=7 format=2]

[ext_resource path="res://Jugador/T1.png" type="Texture" id=1]
[ext_resource path="res://Jugador/T2.png" type="Texture" id=2]
[ext_resource path="res://Jugador/T3.png" type="Texture" id=3]
[ext_resource path="res://Polillas/MelanicasA/MelanicasA.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 33.0

[node name="MelanicasA" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="."]
margin_left = -34.0
margin_top = -21.0
margin_right = 36.0
margin_bottom = 35.0
flat = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.78814e-07, 1.19209e-07 )
scale = Vector2( 0.13912, 0.121991 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="conteoMelanicas" from="." to="." method="_on_MelanicasA_conteoMelanicas"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
